<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_car_controller2_buttons"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Views.Controls.CarControl2ButtonsActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:ignore="LabelFor,RtlHardcoded"
        android:inputType="" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enviar_texto"
        android:id="@+id/btnEnviartexto"
        android:layout_above="@+id/editText"
        android:layout_alignEnd="@+id/btnbuz" />

    <Button
        android:text="@string/buzina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnbuz"
        android:layout_below="@+id/btnleft"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="142dp"
        tools:ignore="UnknownIdInLayout" />

    <Button
        android:text="@string/brake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnBrake"
        tools:ignore="UnknownIdInLayout"
        android:layout_alignTop="@+id/btnright"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/acelerate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAcelerete"
        tools:ignore="UnknownIdInLayout"
        android:layout_alignTop="@+id/btnright"
        android:layout_toStartOf="@+id/btnBrake"
        android:layout_marginEnd="16dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnLeft"
        tools:ignore="ContentDescription"
        android:layout_marginStart="18dp"
        app:srcCompat="@mipmap/ic_keyboard_arrow_left_black_24dp"
        android:layout_marginBottom="55dp"
        android:layout_alignBottom="@+id/btnbuz"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnright"
        tools:ignore="ContentDescription,RtlHardcoded"
        app:srcCompat="@mipmap/ic_keyboard_arrow_right_black_24dp"
        android:layout_marginLeft="76dp"
        android:layout_alignTop="@+id/btnLeft"
        android:layout_toStartOf="@+id/btnAcelerete" />

</RelativeLayout>

